# fpa

./: .gitignore  LICENSE  README.md  pyproject.toml
fpa/: fpa.py  mantissa_operation.py  utils.py
tests/: test_fpa.py
