[tool.poetry]
name = "fpa"
version = "0.1.0"
description = "A Floating-Point Arithmetic Implementation."
authors = ["Eduardo García Maleta <yeyon.personal@protonmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yeyon/fpa"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
